                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 28-05-2005 fixed: SMB Share Controll, when set to Normal User, the default share place should be all [GeminiServer]
 - 27-05-2005 updated: Korean language file (Thnx to AkoXko)
 - 27-05-2005 updated: German language file
 - 27-05-2005 updated: Italian language file (Thnx to kotix)
 - 27-05-2005 updated: Norwegian language file (Thnx to vnm)
 - 27-05-2005 updated: French language file (Thnx to modhack)
 - 27-05-2005 updated: Polish language file (Thnx to napek)
 - 27-05-2005 fixed: shoutcast playlists were broken
 - 27-05-2005 fixed: different info tags are not shown when file has no tag
 - 27-05-2005 fixed: g_applicationMessenger.PictureShow - browser interface would not display single picture
 - 27-05-2005 added: SMB Share control within the GUI! [GeminiServer]
                     This will  make it easy to set the SMB share, instead of XboxMediaCenter.xml editing to set the <samba> settings.
                     it will set the Shares automatic to the desired groups like Video, Musik [also choose able]. 
                     You can define the IP, Workgroup, Username, Password, WINS-Server, Share Name! 
                     Also you can define the Settings mode for Advanced or Normal user, to hold it Simple for the beginners
                     SMB Share Setting is located --> Settings - Network - SMB Share!
 - 26-05-2005 fixed: last track of a audio cd is not shown
 - 25-05-2005 added: fat-x limits handled by playlist loaders.
 - 25-05-2005 changed: separated "output to all speakers" setting for music and video
 - 25-05-2005 added: Ability to enable autosync option for mplayer in settings. (Use Smoothed A/V Sync)