@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 28-05-2005 added: SF patch [ 1203847 ] New info tags for musicplayer, thanks to desertbear
+                     new info item are: MusicPlayer.PlaylistPosition, MusicPlayer.PlaylistLength, MusicPlayer.Codec
+                     MusicPlayer.Bitrate (kbps), MusicPlayer.BitsPerSample, MusicPlayer.Channels, MusicPlayer.SampleRate (kHz)
  - 28-05-2005 fixed: SMB Share Controll, when set to Normal User, the default share place should be all [GeminiServer]
  - 27-05-2005 updated: Korean language file (Thnx to AkoXko)
  - 27-05-2005 updated: German language file
